--- a/src/Presentation/KStar.Form.Web/Areas/NewBusiness/Views/SocialSecurity/Index.cshtml
+++ b/src/Presentation/KStar.Form.Web/Areas/NewBusiness/Views/SocialSecurity/Index.cshtml
@@ -171,6 +171,9 @@
                                v-model="row.FeeType">
                         <el-option value="社保"></el-option>
                         <el-option value="公积金"></el-option>
+                        <el-option value="残疾保障金"></el-option>
+                        <el-option value="滞纳金"></el-option>
+                        <el-option value="服务费"></el-option>
                         <el-option value="其他"></el-option>
                     </el-select>
                     <div v-else class="form-item-div">{{ row.FeeType }}</div>
